Fix DSCommon paragraph alignment

--- a/index.css
+++ b/index.css
@@ -661,6 +661,8 @@ a {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
+  #article-dscommon .panel p {
+    clear: both; }
   /* line 12, /Users/Trikster/static_sites/DelightSoftSite/src/sass/lib/susy/output/support/_clearfix.scss */
   #article-dscommon .hblock:after {
     content: " ";
